<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/mainBg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rel_reset_bypsw"
        android:layout_width="match_parent"
        android:layout_height="@dimen/itemCardAddHeight"
        android:background="@color/colorTextWhite"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="仓库"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <com.example.depository_system.view.DeleteEditText
            android:id="@+id/et_card_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:focusableInTouchMode="true"
            android:gravity="right|center_vertical"
            android:hint="@string/hint_input_depository"
            android:inputType="text"
            android:maxLength="25"
            android:paddingRight="@dimen/card_add_item_margin_right"
            android:textColor="@color/colorTextCardAddEdittext"
            android:textColorHint="@color/colorTextHint"
            android:textSize="15dp" />

    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/rel_choose_bank"
        android:layout_width="match_parent"
        android:layout_height="@dimen/itemCardAddHeight"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/ripple_item_white_bg"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/ruku_input_material_identifier"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />

        <com.example.depository_system.view.NumberEditText
            android:id="@+id/material_identifier_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:focusableInTouchMode="true"
            android:gravity="right|center_vertical"
            android:hint="@string/hint_input_material_identifier"
            android:inputType="number"
            android:maxLength="25"
            android:paddingRight="@dimen/card_add_item_margin_right"
            android:textColor="@color/colorTextCardAddEdittext"
            android:textColorHint="@color/colorTextHint"
            android:textSize="15dp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:background="@color/mainBg" />

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="@dimen/itemCardAddHeight"
        android:background="@color/colorTextWhite"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/ruku_material_name"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />

        <com.example.depository_system.view.DeleteEditText
            android:id="@+id/material_name_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:focusableInTouchMode="true"
            android:gravity="right|center_vertical"
            android:hint="@string/hint_input_material_name"
            android:inputType="text"
            android:maxLength="25"
            android:paddingRight="@dimen/card_add_item_margin_right"
            android:textColor="@color/colorTextCardAddEdittext"
            android:textColorHint="@color/colorTextHint"
            android:textSize="15dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:background="@color/mainBg" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/itemCardAddHeight"
        android:background="@color/colorTextWhite"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/ruku_input_material_type"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <com.example.depository_system.view.DeleteEditText
            android:id="@+id/et_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:hint="@string/hint_input_material_type"
            android:maxLength="10"
            android:paddingRight="@dimen/card_add_item_margin_right"
            android:textColor="@color/colorTextCardAddEdittext"
            android:textColorHint="@color/colorTextHint"
            android:textSize="15dp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:background="@color/mainBg" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/itemCardAddHeight"
        android:background="@color/colorTextWhite"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/ruku_input_material_num"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />

        <com.example.depository_system.view.NumberEditText
            android:id="@+id/et_peopleid"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:focusableInTouchMode="false"
            android:gravity="right|center_vertical"
            android:hint="@string/hint_input_material_num"
            android:inputType="number"
            android:maxLength="18"
            android:paddingRight="@dimen/card_add_item_margin_right"
            android:textColor="@color/colorTextCardAddEdittext"
            android:textColorHint="@color/colorTextHint"
            android:textSize="15sp" />

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:background="@color/mainBg" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/itemCardAddHeight"
        android:background="@color/colorTextWhite"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/ruku_input_factory_name"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />

        <com.example.depository_system.view.DeleteEditText
            android:id="@+id/ruku_factory_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:focusableInTouchMode="false"
            android:gravity="right|center_vertical"
            android:hint="@string/hint_input_factory_name"
            android:inputType="text"
            android:maxLength="18"
            android:paddingRight="@dimen/card_add_item_margin_right"
            android:textColor="@color/colorTextCardAddEdittext"
            android:textColorHint="@color/colorTextHint"
            android:textSize="15sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/itemCardAddHeight"
        android:background="@color/colorTextWhite"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/chuku_project_name"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />

        <com.example.depository_system.view.DeleteEditText
            android:id="@+id/ruku_project"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:focusableInTouchMode="false"
            android:gravity="right|center_vertical"
            android:hint="@string/hint_chuku_project_name"
            android:inputType="text"
            android:maxLength="18"
            android:paddingRight="@dimen/card_add_item_margin_right"
            android:textColor="@color/colorTextCardAddEdittext"
            android:textColorHint="@color/colorTextHint"
            android:textSize="15sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/itemCardAddHeight"
        android:background="@color/colorTextWhite"

        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/chuku_user_organization"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />

        <com.example.depository_system.view.DeleteEditText
            android:id="@+id/chuku_user_organization"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:focusableInTouchMode="false"
            android:gravity="right|center_vertical"
            android:hint="@string/hint_chuku_user_organization"
            android:inputType="text"
            android:maxLength="18"
            android:paddingRight="@dimen/card_add_item_margin_right"
            android:textColor="@color/colorTextCardAddEdittext"
            android:textColorHint="@color/colorTextHint"
            android:textSize="15sp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/itemCardAddHeight"
        android:background="@color/colorTextWhite"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/chuku_reveiver_name"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />

        <com.example.depository_system.view.DeleteEditText
            android:id="@+id/ruku_receiver_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:focusableInTouchMode="false"
            android:gravity="right|center_vertical"
            android:hint="@string/hint_chuku_receiver_name"
            android:inputType="text"
            android:maxLength="18"
            android:paddingRight="@dimen/card_add_item_margin_right"
            android:textColor="@color/colorTextCardAddEdittext"
            android:textColorHint="@color/colorTextHint"
            android:textSize="15sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/itemCardAddHeight"
        android:background="@color/colorTextWhite"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/chuku_time"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />

        <com.example.depository_system.view.DeleteEditText
            android:id="@+id/ruku_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:focusableInTouchMode="false"
            android:gravity="right|center_vertical"
            android:hint="@string/hint_chuku_time"
            android:inputType="time"
            android:maxLength="18"
            android:paddingRight="@dimen/card_add_item_margin_right"
            android:textColor="@color/colorTextCardAddEdittext"
            android:textColorHint="@color/colorTextHint"
            android:textSize="15sp" />
    </RelativeLayout>


</LinearLayout>
